fix vertical alignment of nav icons

--- a/assets/css/_nav.css
+++ b/assets/css/_nav.css
@@ -21,6 +21,7 @@
   &__link {
     display: flex;
     justify-content: center;
+    align-items: center;
     padding: .3rem .5rem;
     background-color: #000;
     color: #fff;
